--- a/public/index.html
+++ b/public/index.html
@@ -9,14 +9,14 @@
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+  <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json"> -->
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
   <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
 
   <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville" rel="stylesheet">
   <link href="%PUBLIC_URL%/css/myStyles.css" rel="stylesheet">
-  <script src="%PUBLIC_URL%/js/modernizr.js"></script>
+  <!-- <script src="%PUBLIC_URL%/js/modernizr.js"></script> -->
   <title>Sample resume</title>
 </head>
 
