--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
 
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
+  <link href="https://fonts.googleapis.com/css?family=Libre+Franklin:400,700" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
 
   <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville" rel="stylesheet">
